customer-service: add api update status
